--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ ul {
 }
 
 .navbar a:hover {
-  border-bottom: 2px #f35a5a solid;
-  color: #806262;
+  border-bottom: 2px #1839df solid;
+  color: #bec2f0;
 }
 
 button {
